fix: replace toList() with collect(Collectors.toList()) for Java compatibility